Regression: Face Set Expand on open boundary will fill hidden geometry #103923

Closed
opened 2023-01-16 17:37:42 +01:00 by Julien Kaspar · 6 comments
Member

System Information
Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03

Blender Version
Broken: version: 3.4.0 Alpha, branch: temp-gpencil-automask, commit date: 2022-10-09 09:11, hash: 3d2dc8c897
Worked: 3.3

Short description of error
One of the use cases for expanding a new face set from a boundary is to hide parts of the mesh
and then expand a new face set from that visible boundary.

The issue is that this operation will fill the hidden faces with the new face set. This is not supposed to happen!
Hidden geometry should never be affected by expand operators.

Exact steps for others to reproduce the error

  • Add a cube, subdivide it a bunch, then apply any modifiers.
  • Create some face sets, for example with the Draw Face Set brush or Shift W
  • Hide one face set by pointing at it and pressing Shift H
  • Hover exactly over the open boundary and press Shift W to expand a new face set along the boundary loop
  • Confirm the expansion and then show all face sets with H
**System Information** Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03 **Blender Version** Broken: version: 3.4.0 Alpha, branch: temp-gpencil-automask, commit date: 2022-10-09 09:11, hash: `3d2dc8c897` Worked: 3.3 **Short description of error** One of the use cases for expanding a new face set from a boundary is to hide parts of the mesh and then expand a new face set from that visible boundary. The issue is that this operation will fill the hidden faces with the new face set. This is not supposed to happen! Hidden geometry should never be affected by expand operators. **Exact steps for others to reproduce the error** - Add a cube, subdivide it a bunch, then apply any modifiers. - Create some face sets, for example with the Draw Face Set brush or `Shift W` - Hide one face set by pointing at it and pressing `Shift H` - Hover exactly over the open boundary and press `Shift W` to expand a new face set along the boundary loop - Confirm the expansion and then show all face sets with `H`
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Face Set Expand on open boundary will fill hidden geometry to Regression: Face Set Expand on open boundary will fill hidden geometry 2023-01-17 05:59:45 +01:00
Member

Finding it hard to bisect due to this crash #100479

Finding it hard to bisect due to this crash #100479

This issue was referenced by da21e035d3

This issue was referenced by da21e035d33535ce8740f8b563deb73f9e52245e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2023-01-20 03:05:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103923
No description provided.