Sculpt: Fix T103923: Expand face sets now taking visibility into account

The code was never ported from the old system of encoding visibility
as negative face set values.